--- a/assignments/assignment_01.html
+++ b/assignments/assignment_01.html
@@ -11,13 +11,20 @@
   </head>
   <body>
     <div class="title">
-      <h1>ASSIGNMENT 01 - PIE & DONUT CHARTS</h1>
+      <h1>ASSIGNMENT 01 - Venn Diagram</h1>
     </div>
     <div class="bio">
       <h2>Description</h2>
-      <p class="bioText">This is the text for the chart, with multiple links... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent posuere ante quam, nec blandit ex tristique sed. Vivamus neque ex, imperdiet eget urna vel, volutpat consectetur leo. Nulla nunc sem, consectetur ac fermentum in, euismod vel tortor. Suspendisse congue purus quis nunc sodales laoreet. Nulla sed tristique tellus. Curabitur at sollicitudin mi, eu pellentesque arcu. In at orci libero. Quisque interdum, ipsum eget placerat eleifend, massa diam pellentesque orci, ac suscipit eros sem id erat. Nunc iaculis nibh id nulla sodales egestas. Duis ultrices aliquam neque ut luctus. Fusce condimentum dictum scelerisque. Cras eu fringilla ligula.<br><br>Proin interdum lorem tincidunt aliquet placerat. Maecenas aliquam venenatis erat. Integer tempus odio varius nunc egestas, id imperdiet lectus auctor. Morbi non varius mi, ut pulvinar odio. Nam nec dolor massa. Nunc a molestie ligula. Nullam imperdiet vestibulum felis in consequat. Aliquam felis turpis, bibendum vel mollis ut, bibendum ut libero. Maecenas ultricies molestie lectus, in congue nibh pellentesque sit amet. Mauris at diam feugiat, sodales purus id, mollis felis. Fusce sodales purus et dolor condimentum viverra. Curabitur fringilla leo consequat est sagittis, sit amet maximus nisi volutpat. Morbi quis nulla pharetra, volutpat turpis nec, scelerisque mauris. Quisque porta elit vel eros dictum condimentum. In imperdiet in velit id cursus. Sed pretium ultrices velit.</p>
+      <p class="bioText"> <b> Venn Diagram </b> : Displays a connecitno between two or more sets of data by using overlapping shapes, usually using circles, to display if a data sets relationship is inclusive, exclusive or are not related at all.  This is achieved by representing each area inside or outside the circles with a value that indicates the relationship(s). 
+      <br><br> <b> Images and Examples </b> 
+      <img class="bioImage" src="../image/venndiagramcolors.gif">
+      <img class="bioImage" src="../image/venndiagramfood.jpg">
+      <img class="bioImage" src="../image/venndiagrammarvel.jpg">
+      <br><br> <b>Types of Data </b> The Types of data that can be included is flexible.  As the examples above show, it can be colors, text, icons and interger which would represent the count of each circle or category.
+      <br><br> <b> History of Venn Diagram </b> Who was the first to use it? His name was John Venn, who at the time was a lecturer at the University of Hull, teaching science and probability where he developed this new way of representing sets of data to be simplify the differentiation between one "data set" and another.  He wrote a book called <i> Symbolic Logic </i> in which he details his work.
+      What other graphs is it related to or did it evolve from something else?  The venn diagram evolved from previous representation of where data relashionships like that of the Eurler model.  Here this method shows specific relashionships overlapp with a variety of data sets as opposed to the venn diagram that is much simpler.  It did this by displaying more general relashionships between data sets which all variables can be included.</p>
       <h2>Examples</h2>
-      <img class="bioImage" src="../image/santamarta.jpg">
+      <img class="bioImage" src="../image/Eulerdiagram.jpg">
       <p class="bioText"><a href="../index.html">Take me back home...</a></p>
     </div>
   </body>
