--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   </head>
   <body>
     <div class="title">
-      <h1>DATA VISUALIZATION FOR ARCHITECTURE, URBANISM AND THE HUMANITIES</h1>
-      <h3>by JUAN FRANCISCO SALDARRIAGA</h3>
+      <h1>Sustainable Management: Columbia University</h1>
+      <h3>by CESAR CARDONA</h3>
     </div>
     <div class="bio">
       <img class="bioImage" src="image/santamarta.jpg">
-      <p class="bioText">I am a researcher at the <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a> at Columbia University and an adjunct assistant professor of urban planning and architecture at the <a href="http://www.arch.columbia.edu/"> Graduate School of Architecture, Planning and Preservation (GSAPP)</a>. I do research at the intersection of data, GIS, urbanism, architecture and the humanities and I teach graduate level <a href="https://github.com/juanfrans-courses">seminars</a> on mapping, advanced GIS and data visualization. In the past I've worked as a research scholar at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, an architectural designer for <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a> and <a href="http://www.dgtarchitects.com/">D.G.T. Architects</a>, and as the GIS project coordinator for the <a href="http://www.catholiccharitiesny.org/">Catholic Charities</a>.</p>
+      <p class="bioText"> I am a student at Columbia University, pursuing a Master's Degree in Sustainable Management.  My goal before I graduate in August of 2017, is to fullfill my educational interest  in urban planning, accounting, cities and general managment.  So far some of the courses I have taken to reach this goal include: <br><br> Sustainable Management, Sustainable Energy Resource Developement, Sustainable Economics, Cost Benefit Analisys, Urban Ecology, Sustainable Metrics, Geographical Information System throught the school of Architecture Planning and Preservation, Capstone: Exploring Infrastructure Options Towards Improing Public Lighting in Bogota, Colombia in Partnership with Bloomgber Associates, LP., Earnings Quality and Fundamental Analys throught Columbia Business School and Disaster Risk Management and Sustainable Urban Resilience. <br><br>  My goal is that with my work background in budget operations managment, I would have enhanced my skill sets to contribute to either the city goverment or a private company towards managing a departments budget with the intent to use some of my sustainability knowlegde to elevate the environment I am working in for my future fellow colleague.  Currently, I am open to new opportunities whether, part time or full time to complement my school work.  I hope that by the time I graduate I would have an opportunity to take advantage, where I am open to the possibility of moving to another city, either within the United States or work Internationally.   
+     </p>
     </div>
     <div class=linkList>
       <h2>ASSIGNMENTS</h2>
